@@ -9,8 +9,7 @@ $LOAD_PATH.unshift( "#{File.dirname(__FILE__)}/lib" )
 # Pull in local 'net/ldap' as opposed to an installed version.
 require 'net/ldap'
 
-Hoe.new('net-ldap', Net::LDAP::VERSION) do |p|
-	p.rubyforge_name = 'net-ldap'
+Hoe.new('ruby-net-ldap', Net::LDAP::VERSION) do |p|
 	p.developer('Francis Cianfrocca', 'garbagecat10@gmail.com')
 	p.developer('Emiel van de Laar', 'gemiel@gmail.com')
 end
